--- a/Server/.vscode/settings.json
+++ b/Server/.vscode/settings.json
@@ -1,7 +1,5 @@
 {
-    "C_Cpp.errorSquiggles": "enabled",
     "files.associations": {
-        "iostream": "cpp",
         "array": "cpp",
         "atomic": "cpp",
         "bit": "cpp",
@@ -17,7 +15,6 @@
         "cstdio": "cpp",
         "cstdlib": "cpp",
         "cstring": "cpp",
-        "ctime": "cpp",
         "cwchar": "cpp",
         "cwctype": "cpp",
         "deque": "cpp",
@@ -39,8 +36,10 @@
         "tuple": "cpp",
         "type_traits": "cpp",
         "utility": "cpp",
+        "fstream": "cpp",
         "initializer_list": "cpp",
         "iosfwd": "cpp",
+        "iostream": "cpp",
         "istream": "cpp",
         "limits": "cpp",
         "new": "cpp",
@@ -48,11 +47,6 @@
         "ostream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
-        "typeinfo": "cpp",
-        "codecvt": "cpp",
-        "ratio": "cpp",
-        "fstream": "cpp",
-        "iomanip": "cpp",
-        "sstream": "cpp"
+        "typeinfo": "cpp"
     }
 }
