alls working with the server
docker works and images works

--- a/Server/Dockerfile
+++ b/Server/Dockerfile
@@ -1,12 +1,14 @@
-FROM ubuntu:20.04
 
-WORKDIR /root/app
-COPY . /root/app
+FROM ubuntu:22.04
 
-RUN apt-get update && apt-get install -y \
-g++ \
-libz-dev
+WORKDIR /root/mtacoin_server_app
+COPY . .
 
-RUN g++ -o coin_server main.cpp server.cpp block.cpp global.cpp -lz
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \ 
+    g++ \
+    libz-dev \
+    && rm -rf /var/lib/apt/lists/* \
+    && g++ -std=c++17 -o coin_server main.cpp server.cpp block.cpp global.cpp -lz
 
-CMD [ "./coin_server" ]
+CMD ["./coin_server"]
