everything is working

--- a/Miner/Dockerfile
+++ b/Miner/Dockerfile
@@ -1,13 +1,16 @@
-FROM ubuntu:20.04
 
-WORKDIR /root/app
-COPY . /root/app
+FROM ubuntu:22.04
 
-RUN apt-get update && apt-get install -y \
-g++-8 \
-libz-dev \
-build-essential
 
-RUN g++-8 -std=c++17 -o coin_miner main.cpp miner.cpp block.cpp global.cpp -lz
+WORKDIR /root/mtacoin_miner_app
+COPY . .
 
-CMD [ "./coin_miner" ]
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+    g++ \
+    libz-dev \
+    && rm -rf /var/lib/apt/lists/*\
+    && g++ -std=c++17 -o coin_miner main.cpp miner.cpp block.cpp global.cpp -lz 
+
+
+CMD ["./coin_miner"]
